# ProgrammingWithClasses

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  CaeserCipher.cpp  CaeserCipher.h  Cipher.cpp  Cipher.h  CipherText.cpp  CipherText.h  Clonable.h  Date.cpp  Date.h  DatePortuguese.cpp  DatePortuguese.h  DateSpecial.cpp  DateSpecial.h  Figure.cpp  Figure.h  Line.cpp  Line.h  Metrics.cpp  Metrics.h  NaiveDate.cpp  NaiveDate.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h  String.cpp  String.h  StringArctan.cpp  StringArctan.h  StringBasic.cpp  StringBasic.h  StringCipher.cpp  StringCipher.h  StringDecimal.cpp  StringDecimal.h  StringSpecial.cpp  StringSpecial.h  TranspositionCipher.cpp  TranspositionCipher.h  (+9 more)
src/models/: Author.cpp  Author.h  Book.cpp  Book.h  CMakeLists.txt  Count.cpp  Count.h  FootballPlayer.cpp  FootballPlayer.h  FootballTeam.cpp  FootballTeam.h  Friend.cpp  Friend.h  Library.cpp  Library.h  Person.cpp  Person.h  Thermograph.cpp  Thermograph.h  Thermometer.h  ThermometerExtreme.cpp  ThermometerExtreme.h  ThermometerMulti.cpp  ThermometerMulti.h  ThermometerSimple.cpp  ThermometerSimple.h
src/vectors/: CMakeLists.txt  Predicate.h  Predicates_StringBasic.cpp  Predicates_StringBasic.h  Utilities_vector.h  Vocabulary.cpp  Vocabulary.h  VocabularyBidirectional.cpp  VocabularyBidirectional.h  Words.cpp  Words.h
tests/: CMakeLists.txt  DateSpecialTest.cpp  DateTest.cpp  FigureTest.cpp  NaiveDateTest.cpp  PointTest.cpp  StringTest.cpp  TriangleTest.cpp  UtilityFunctionsTest.cpp  main.cpp
tests/models/: CMakeLists.txt  CountTest.cpp  FootballPlayerTest.cpp  LibraryTest.cpp  PersonTest.cpp  ThermometerTest.cpp  realmadrid.txt
tests/vectors/: CMakeLists.txt  VocabularyBidirectionalTest.cpp  VocabularyTest.cpp  (+1 more)
